--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/Chubatik/new-app",
+  "homepage": "https://github.com/Chubatik/new-app/posts",
   "name": "new-app",
   "version": "0.1.0",
   "private": true,
