--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,4 +30,8 @@ jobs:
 
       - run: npm run build
 
+      - run: git config --global user.email chubatyuk02@gmail.com
+
+      - run: git config --global user.name Chubatik
+
       - run: npm run deploy
