--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,39 @@
 version: 2.1
 jobs:
+  eslint:
+    docker:
+      - image: node:latest
+
+    working_directory: ~/repo
+
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "package.json" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-
+
+            - run: npm install
+
+            - save_cache:
+                paths:
+                  - node_modules
+                key: v1-dependencies-{{ checksum "package.json" }}
+      - name: "ESLint"
+      - run: npm run eslint
+
+  test:
+    docker:
+      - image: node:latest
+
+    working_directory: ~/repo
+
+    steps:
+      - checkout
+      - name: "Tests"
+      - run: npm run test
+
   build:
     docker:
       - image: node:latest
@@ -8,30 +42,24 @@ jobs:
 
     steps:
       - checkout
-
-      # Download and cache dependencies
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "package.json" }}
-            # fallback to using the latest cache if no exact match is found
-            - v1-dependencies-
-
-      - run: npm install
-
-      - save_cache:
-          paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
-
-      # run tests!
-      - run: npm run eslint
-
-      - run: npm run test
-
+      - name: "Build"
       - run: npm run build
 
-      - run: git config --global user.email chubatyuk02@gmail.com
+  deploy:
+    docker:
+      - image: node:latest
 
-      - run: git config --global user.name Chubatik
+    working_directory: ~/repo
 
+    steps:
+      - checkout
+      - name: "Deploy"
       - run: npm run deploy
+
+workflows:
+  deploy-workflow:
+    jobs:
+      - eslint
+      - test
+      - build
+      - deploy
