--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,23 +52,22 @@ jobs:
       - checkout
       - run: npm run deploy
 
-workflows:
-  build_and_test:
-    jobs:
-      - eslint
-      - test:
-          requires:
-            - eslint
-      - build:
-          requires:
-            - eslint
-            - test
-      - hold:
-          type: approval
-          requires:
-            - eslint
-            - test
-            - build
-      - deploy:
-          requires:
-            - hold
+workflow:
+ jobs:
+  - eslint
+  - test:
+      requires:
+        - eslint
+  - build:
+      requires:
+        - eslint
+        - test
+  - hold:
+      type: approval
+      requires:
+        - eslint
+        - test
+        - build
+  - deploy:
+      requires:
+        - hold
