--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,60 +1,62 @@
 version: 2.1
-jobs:
-  eslint:
-    docker:
-      - image: node:latest
 
-    working_directory: ~/repo
+build_and_test:
+  jobs:
+    eslint:
+      docker:
+        - image: node:latest
 
-    steps:
-      - checkout
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "package.json" }}
-            # fallback to using the latest cache if no exact match is found
-            - v1-dependencies-
+      working_directory: ~/repo
 
-            - run: npm install
+      steps:
+        - checkout
+        - restore_cache:
+            keys:
+              - v1-dependencies-{{ checksum "package.json" }}
+              # fallback to using the latest cache if no exact match is found
+              - v1-dependencies-
 
-            - save_cache:
-                paths:
-                  - node_modules
-                key: v1-dependencies-{{ checksum "package.json" }}
-      - name: "ESLint"
-      - run: npm run eslint
+              - run: npm install
 
-  test:
-    docker:
-      - image: node:latest
+              - save_cache:
+                  paths:
+                    - node_modules
+                  key: v1-dependencies-{{ checksum "package.json" }}
+        - name: "ESLint"
+        - run: npm run eslint
 
-    working_directory: ~/repo
+    test:
+      docker:
+        - image: node:latest
 
-    steps:
-      - checkout
-      - name: "Tests"
-      - run: npm run test
+      working_directory: ~/repo
 
-  build:
-    docker:
-      - image: node:latest
+      steps:
+        - checkout
+        - name: "Tests"
+        - run: npm run test
 
-    working_directory: ~/repo
+    build:
+      docker:
+        - image: node:latest
 
-    steps:
-      - checkout
-      - name: "Build"
-      - run: npm run build
+      working_directory: ~/repo
 
-  deploy:
-    docker:
-      - image: node:latest
+      steps:
+        - checkout
+        - name: "Build"
+        - run: npm run build
 
-    working_directory: ~/repo
+    deploy:
+      docker:
+        - image: node:latest
 
-    steps:
-      - checkout
-      - name: "Deploy"
-      - run: npm run deploy
+      working_directory: ~/repo
+
+      steps:
+        - checkout
+        - name: "Deploy"
+        - run: npm run deploy
 
 workflows:
   build_and_test:
