--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 jobs:
   eslint:
     docker:
-      - image: cimg/node:latest
+      - image: cimg/node:stable
     working_directory: ~/repo
     steps:
       - checkout
@@ -18,19 +18,19 @@ jobs:
       - run: npm run eslint
   test:
     docker:
-      - image: node:latest
+      - image: cimg/node:stable
     working_directory: ~/repo
     steps:
       - run: npm run test
     build:
       docker:
-        - image: node:latest
+        - image: cimg/node:stable
       working_directory: ~/repo
       steps:
         - run: npm run build
     deploy:
       docker:
-        - image: node:latest
+        - image: cimg/node:stable
       working_directory: ~/repo
       steps:
         - run: npm run deploy
