--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,29 +15,25 @@ jobs:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
-      - name: "ESLint"
-      - command: "npm run eslint"
+      - run: npm run eslint
   test-job:
     docker:
       - image: cimg/node:stable
     working_directory: ~/repo
     steps:
-      - name: "Test"
-      - command: "npm run test"
-    build:
-      docker:
-        - image: cimg/node:stable
-      working_directory: ~/repo
-      steps:
-        - name: "Build"
-        - command: "npm run build"
-    deploy-job:
-      docker:
-        - image: cimg/node:stable
-      working_directory: ~/repo
-      steps:
-        - name: "Deploy"
-        - command: "npm run deploy"
+      - run: npm run test
+  build-job:
+    docker:
+      - image: cimg/node:stable
+    working_directory: ~/repo
+    steps:
+      - run: npm run build
+  deploy-job:
+    docker:
+      - image: cimg/node:stable
+    working_directory: ~/repo
+    steps:
+      - run: npm run deploy
 
 workflows:
   version: 2
