--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,31 +6,26 @@ jobs:
     working_directory: ~/repo
     steps:
       - checkout
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "package.json" }}
-            - v1-dependencies-
       - run: npm install
-      - save_cache:
-          paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
       - run: npm run eslint
   test-job:
     docker:
       - image: node:latest
+    working_directory: ~/repo
     steps:
       - run: npm install
       - run: npm run test
   build-job:
     docker:
       - image: node:latest
+    working_directory: ~/repo
     steps:
       - run: npm install
       - run: npm run build
   deploy-job:
     docker:
       - image: node:latest
+    working_directory: ~/repo
     steps:
       - run: npm install
       - run: npm run deploy
