--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,7 @@ jobs:
       - image: node:latest
     working_directory: ~/repo
     steps:
+      - checkout
       - run: npm install
       - run: npm run test
   build-job:
@@ -20,6 +21,7 @@ jobs:
       - image: node:latest
     working_directory: ~/repo
     steps:
+      - checkout
       - run: npm install
       - run: npm run build
   deploy-job:
@@ -27,6 +29,7 @@ jobs:
       - image: node:latest
     working_directory: ~/repo
     steps:
+      - checkout
       - run: npm install
       - run: npm run deploy
 
