--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,9 @@ jobs:
       - checkout
       - run: npm install
       - run: npm run eslint
+      - add_ssh_keys:
+          fingerprints:
+            - "f2:ab:cd:44:62:69:48:63:30:93:b6:f5:cf:cc:9b:fa"
   test-job:
     docker:
       - image: node:latest
@@ -31,8 +34,6 @@ jobs:
     steps:
       - checkout
       - run: npm install
-      - run: git config --global user.email "chubatyuk02@gmail.com"
-      - run: git config --global user.name "Chubatik"
       - run: npm run deploy
 
 workflows:
@@ -47,9 +48,6 @@ workflows:
           requires:
             - eslint-job
             - test-job
-          filters:
-            branches:
-              only: master
       - deploy-job:
           requires:
             - eslint-job
