--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,9 +29,10 @@ jobs:
       - image: node:latest
     working_directory: ~/repo
     steps:
-      - checkout
       - run: npm install
-      - run: ssh 92:61:c7:62:9b:e6:40:0f:9f:91:a3:69:08:19:72:fe@chubatik.github.io
+      - add_ssh_keys:
+          fingerprints:
+            - "92:61:c7:62:9b:e6:40:0f:9f:91:a3:69:08:19:72:fe"
       - run: npm run deploy
 
 workflows:
