--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,9 +5,7 @@ jobs:
       - image: node:latest
     working_directory: ~/repo
     steps:
-      - add_ssh_keys:
-          fingerprints:
-            - "92:61:c7:62:9b:e6:40:0f:9f:91:a3:69:08:19:72:fe"
+      - add_ssh_keys
       - checkout
       - run: npm install
       - run: npm run build
