--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 jobs:
   build-job:
     docker:
-      - image: node:stable
+      - image: node:latest
     working_directory: ~/repo
     steps:
       - checkout
@@ -10,7 +10,7 @@ jobs:
       - run: npm run build
   deploy-job:
     docker:
-      - image: node:stable
+      - image: node:latest
     working_directory: ~/repo
     steps:
       - checkout
