--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,9 @@ jobs:
     steps:
       - checkout
       - run: npm install
+      - run: |
+          git config user.email "${CIRCLE_USERNAME}@users.noreply.github.com"
+          git config user.name "${CIRCLE_USERNAME}"
       - run: npm run deploy
 
 workflows:
