added git config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,9 +15,11 @@ jobs:
     steps:
       - checkout
       - run: npm install
-      - run: |
-          git config user.email "${CIRCLE_USERNAME}@users.noreply.github.com"
-          git config user.name "${CIRCLE_USERNAME}"
+      - run:
+          name: "GIT config"
+          command: |
+            git config user.email "${CIRCLE_USERNAME}@users.noreply.github.com"
+            git config user.name "${CIRCLE_USERNAME}"
       - run: npm run deploy
 
 workflows:
